# do-not-lock-my-system

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  dont_lock_pc.py  dontlockpc.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/dontlockpc/: __init__.py  __main__.py  app.py  autostart.py  tray.py
src/dontlockpc/backends/: __init__.py  base.py  macos.py  windows.py
tests/: test_backends.py
