[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dontlockpc"
version = "1.2.0"
description = "Keep your computer awake and unlocked while long-running AI agents work — a lightweight cross-platform (Windows + macOS) utility that prevents locking, sleeping, and display-off."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Don't Lock My PC contributors" }]
keywords = ["keep-awake", "caffeine", "prevent-sleep", "no-lock", "insomnia", "ai-agents", "windows", "macos"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "pystray>=0.19",
    "Pillow>=9.0",
    "pyobjc-framework-Quartz>=9.0 ; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=9.0 ; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "pytest>=7.0", "pyinstaller>=6.0"]

[project.urls]
Homepage = "https://github.com/mahanteshimath/do-not-lock-my-system"
Issues = "https://github.com/mahanteshimath/do-not-lock-my-system/issues"
Source = "https://github.com/mahanteshimath/do-not-lock-my-system"

[project.scripts]
dontlockpc = "dontlockpc.app:main"

[project.gui-scripts]
dontlockpc-gui = "dontlockpc.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E203"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
